--- a/static/cotravelling/scss/base.css
+++ b/static/cotravelling/scss/base.css
@@ -6921,8 +6921,11 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6; } }
 
-body {
+html {
   position: relative;
+  min-height: 100%; }
+
+body {
   font-family: 'Fira Sans', sans-serif;
   background-color: #F3F3F3; }
 
